# hyperP

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  README.md  biome.json  docker-compose.yml  package-lock.json  package.json  pyproject.toml  tsconfig.json
docs/: CYPHER_GUIDE.md  profile-unifier-api-spec.md  profile-unifier-architecture.md  profile-unifier-entity-and-sales.md  profile-unifier-glossary.md  profile-unifier-graph-model-diagram.md  profile-unifier-graph-schema.md  profile-unifier-matching-spec.md  profile-unifier-openapi-3.1.yaml  profile-unifier-policy-decisions.md  profile-unifier-prd.md  profile-unifier-reviewer-workflow.md  profile-unifier-roadmap.md  profile-unifier-scaffold-plan.md  profile-unifier-scaffold.md  profile-unifier-sequence-diagrams.md  profile-unifier-sql-schema.md
docs/superpowers/plans/: 2026-05-04-oauth2-client-credentials.md  2026-05-04-user-onboarding.md
docs/superpowers/specs/: 2026-05-04-oauth2-client-credentials-design.md  2026-05-04-user-onboarding-design.md
infra/neo4j/: init.cypher
prisma/: schema.prisma
prisma/migrations/20260331113957_init/: migration.sql
scripts/: seed.ts
services/api/: .env.example  Dockerfile  package-lock.json  package.json  pyproject.toml
services/api/src/: __init__.py  app.py  app.ts  config.py  http_utils.py  main.py  redis_client.py  server.ts  types.py  types_reports.py  types_requests.py  types_sales.py
services/api/src/auth/: __init__.py  api_key_models.py  api_keys.py  deps.py  models.py  oauth_client_models.py  oauth_clients.py  oauth_tokens.py  revoke.py  store.py  verify.py
services/api/src/config/: env.ts
services/api/src/graph/: __init__.py  client.py  client.ts  converters.py  golden_profile.py  mappers.py  mappers_entities.py  mappers_reports.py  mappers_sales.py  queries.py  queries.ts
services/api/src/graph/queries/: __init__.py  admin.py  api_keys.py  entities.py  events.py  graph.py  ingestion.py  merge.py  oauth_clients.py  persons.py  persons_list.py  reports.py  review.py  sales.py  survivorship.py  users.py
services/api/src/llm/: service.py
services/api/src/repositories/: __init__.py  deps.py
services/api/src/repositories/neo4j/: __init__.py  _utils.py  admin.py  entity.py  event.py  ingest.py  merge.py  person.py  report.py  review.py  sales.py  survivorship.py
services/api/src/repositories/protocols/: __init__.py  admin.py  entity.py  event.py  ingest.py  merge.py  person.py  report.py  review.py  sales.py  survivorship.py
services/api/src/routes/: admin.py  admin.ts  api_keys.py  auth.py  entities.py  events.py  events.ts  health.py  health.ts  ingest.py  ingest.ts  merge.py  merge.ts  oauth.py  oauth_clients.py  person_sales.py  persons.py  persons.ts  public_pages.py  reports.py  review.py  review.ts  survivorship.py  survivorship.ts  users.py
services/api/src/types/: index.ts
services/api/tests/: conftest.py  test_llm_service.py  test_oauth_clients.py  test_oauth_config.py  test_oauth_routes.py  test_oauth_tokens.py  test_user_onboarding.py
services/frontend/: Dockerfile  README.md  eslint.config.mjs  package-lock.json  package.json
services/frontend/src/: auth.ts  middleware.ts
services/frontend/src/app/: error.tsx  layout.tsx  not-found.tsx  page.tsx
services/frontend/src/components/: AuditTab.tsx  ConnectionsCard.tsx  CountCardsCell.tsx  DatePickerField.tsx  FieldTrustEditorDialog.tsx  GraphDetailPanel.tsx  GraphExplorer.tsx  HealthIndicator.tsx  IdentifiersSection.tsx  ManualMergeDialog.tsx  MatchesTab.tsx  PaginationBar.tsx  PersonDetailTabs.tsx  PersonFocusedGraph.tsx  PersonGraphViewer.tsx  PersonRow.tsx  PersonSection.tsx  PersonsFilterAddressSection.tsx  PersonsFilterDobSection.tsx  PersonsFilterPanel.tsx  PersonsListTable.tsx  ReportExecutePanel.tsx  ReportForm.tsx  ReportParamRow.tsx  ReviewActionsPanel.tsx  ReviewQueueFilters.tsx  SalesCard.tsx  SourceRecordsTab.tsx  StartIngestionRunDialog.tsx  SurvivorshipOverrideDialog.tsx  ToastProvider.tsx  UnmergeDialog.tsx  graph-utils.ts
services/frontend/src/lib/: api-client.ts  api-server.ts  api-types-ops.ts  api-types-person.ts  api-types.ts  api-url.ts  display.ts  permissions.ts  proxy.ts  report-export.ts  route-paths.ts  usePaginatedFetch.ts
services/ingestion/: .env.example  Dockerfile  pyproject.toml
services/ingestion/src/: birthday.py  celery_app.py  config.py  golden_profile.py  main.py  models.py  pipeline.py  pipeline_knows.py  pipeline_normalization.py  pipeline_sales.py  pipeline_writes.py  tasks.py
services/ingestion/src/connectors/: base.py  db_factory.py  phppos_sales_common.py  sample.py
services/ingestion/src/connectors/eko/: __init__.py  connector.py  db.py  sales.py  schema.py
services/ingestion/src/connectors/fundbox/: __init__.py  base.py  builders.py  contacts.py  db.py  junk.py  legacy.py  merged.py  sales.py  schema.py  users.py
services/ingestion/src/connectors/speedzone/: __init__.py  connector.py  db.py  sales.py  schema.py
services/ingestion/src/graph/: bootstrap.py  client.py  queries.py  schema_init.py
services/ingestion/src/graph/queries/: __init__.py  entities.py  knows.py  matching.py  merge.py  persons.py  sales.py  source_records.py
services/ingestion/src/matching/: deterministic.py  engine.py  heuristic.py  similarity.py  snapshot.py
services/ingestion/src/normalizers/: address.py  email.py  name.py  phone.py
services/nginx/: nginx.conf
services/web/: .env.local.example  .gitignore  Dockerfile  README.md  package-lock.json  package.json  tsconfig.json
services/web/src/: theme.ts
src/: config.ts  server.ts
src/common/: auth.ts  errors.ts  idempotency.ts  rbac.ts  schemas.ts
src/modules/golden-profile/: service.ts
src/modules/ingestion/: normalizer.ts  quality-flags.ts  routes.ts  service.ts
src/modules/matching/: candidate-generation.ts  deterministic.ts  engine.ts
src/modules/person/: merge-lineage.ts  routes.ts  service.ts
src/modules/source-system/: routes.ts  service.ts
tests/unit/: deterministic.test.ts  merge-lineage.test.ts  normalizer.test.ts  quality-flags.test.ts
(+124 files in other folders)
