[project]
name = "profile-unifier-api"
version = "0.1.0"
description = "Profile unifier HTTP API service (FastAPI + Neo4j)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.30,<1",
    "neo4j>=5.20,<6",
    "pydantic>=2.6,<3",
    "pydantic-settings>=2.2,<3",
    "python-dotenv>=1.0,<2",
    "google-auth>=2.29,<3",
    "cachetools>=5.3,<6",
    "requests>=2.31,<3",
    "redis[hiredis]>=5.0,<6",
    "httpx>=0.27,<1",
]

[tool.uv]
# Virtual workspace member: uv locks our deps but does not build/install the
# project itself. This avoids a collision with services/ingestion, which also
# uses a top-level `src` package. Source is imported by setting PYTHONPATH or
# running from the service directory.
package = false

[dependency-groups]
dev = [
    "mypy>=1.20.0",
    "ruff>=0.15.9",
    "types-cachetools>=6.2.0.20260408",
    "types-requests>=2.31.0.0",
]

# Shared ruff/mypy/pytest config inherited from the workspace root pyproject.toml.
