[project]
name = "profile-unifier-ingestion"
version = "0.1.0"
description = "Ingestion service for the profile unification platform"
requires-python = ">=3.12"
dependencies = [
    "neo4j>=5.20,<6",
    "pydantic>=2.6,<3",
    "pydantic-settings>=2.2,<3",
    "httpx>=0.27,<1",
    "phonenumbers>=8.13,<9",
    "python-dotenv>=1.0,<2",
    "pymysql>=1.1,<2",
    "sqlalchemy>=2.0,<3",
    "celery[redis]>=5.4,<6",
    "redis>=5.0,<6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
    "ruff>=0.4,<1",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src"]

[tool.uv]
package = true

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
